@@ -1,7 +1,11 @@
 2015-07-30  Benno Schulenberg  <bensberg@justemail.net>
-	* src/global.c (shortcut_init): Don't show ^R and ^T in the help lines
-	in restricted mode (if possible), to give visual feedback.
+	* src/global.c (shortcut_init): Don't show ^R and ^T in the help
+	lines in restricted mode (if possible), to give visual feedback.
 	* src/*.c: Normalize the whitespace after the preceding changes.
+	* src/nano.c (show_restricted_warning, say_there_is_no_help):
+	Differentiate between something being disabled/restricted (because
+	of the way of invocation) and help texts being unavailable (which
+	is a compile-time decision).
 
 2015-07-29  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_linter): When the linter is called in restricted mode
